# scikit-geometry

./: .appveyor.yml  .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  arrangements_visibility.html  convex_hull.html  environment.yml  genindex.html  index.html  introduction.html  objects.inv  polygon.html  polygon_set.html  reference.html  search.html  searchindex.js  setup.py  simplify.html  skeleton.html  voronoi_delaunay.html
.github/: dependabot.yml
.github/workflows/: main.yml  wheels.yml
_sources/: arrangements_visibility.ipynb.txt  convex_hull.ipynb.txt  index.rst.txt  introduction.ipynb.txt  polygon.ipynb.txt  polygon_set.ipynb.txt  simplify.ipynb.txt  skeleton.ipynb.txt  voronoi_delaunay.ipynb.txt
_static/css/: _nbsphinx.scss  custom.css.map  custom.scss
docs/: Makefile
docs/source/: arrangements_visibility.ipynb  conf.py  convex_hull.ipynb  index.rst  inscribed.ipynb  introduction.ipynb  polygon.ipynb  polygon_set.ipynb  reference.rst  simplify.ipynb  skeleton.ipynb  voronoi_delaunay.ipynb
docs/source/_static/css/: custom.css
include/: funcs.hpp  import_obj.hpp  pygal.hpp  skgeom.hpp
include/pybind11/: cast.h  pybind11.h
notebooks/: draw_examples.ipynb
pygal/: __init__.py  draw.py  utils.py
skgeom/: __init__.py  _version.py  draw.py  utils.py
src/: aabb_tree.cpp  arrangement.cpp  boolean.cpp  convex_hull.cpp  funcs.cpp  global_functions.cpp  inscribed.cpp  kernel.cpp  mesh.cpp  minkowski.cpp  optimal_transport.cpp  polygon.cpp  polygon_set.cpp  polyhedron.cpp  principal_component_analysis.cpp  pygal.cpp  pygal_3D_minkowski.cpp  pygal_aabb_tree.cpp  pygal_arrangement.cpp  pygal_boolean.cpp  pygal_convex_hull.cpp  pygal_global_functions.cpp  pygal_kernel.cpp  pygal_minkowski.cpp  pygal_optimal_transport.cpp  pygal_polygon.cpp  pygal_polyhedron.cpp  pygal_principal_component_analysis.cpp  pygal_straight_skeleton.cpp  pygal_visibility.cpp  pygal_voronoi_delaunay.cpp  simplification.cpp  skeleton.cpp  skgeom.cpp  straight_skeleton.cpp  visibility.cpp  voronoi_delaunay.cpp
src/docs/: docs_polyhedron.h
test/: draw.py  polyhedron.py  test.py  test_arrangement.py  test_basic.py  test_convex_hull.py  test_kernel.py  test_mesh.py  test_pca.py  test_polygon.py  test_polyhedron.py  test_visibility.py  test_voronoi.py
